# graph

./: .gitignore  .tool-versions  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: api.yml  app.yml
graph-cli/: Cargo.toml
graph-cli/src/: main.rs
graph-core/: Cargo.toml
graph-core/examples/: big.graph  failure.graph  playground.rs
graph-core/src/: graph.pest  graph.rs  lib.rs  node.rs  parser.rs  render.rs
graph-py/: Cargo.toml
graph-python/: Cargo.toml
graph-python/src/: lib.rs
graph_api/: .gitignore  Cargo.toml
graph_api/src/: main.rs
graph_app/: package.json  pnpm-lock.yaml  svelte.config.js  uno.config.ts  vite.config.ts
graph_app/src/: module.d.ts
graph_app/src/lib/: graphLanguage.json  panZoom.ts  utils.ts
graph_app/src/lib/components/: editor.svelte  viewer.svelte
graph_app/src/routes/: +layout.svelte  +page.svelte
graph_cli/: Cargo.toml
graph_cli/src/: main.rs
graph_core/: Cargo.toml
graph_core/examples/: basic.graph  minimal.graph
graph_core/src/: edge.rs  graph.rs  lib.rs  node.rs  render.rs
graph_editor/: package.json  pnpm-lock.yaml  vite.config.ts
graph_editor/src/routes/: +page.svelte
graph_py/: .gitignore  Cargo.toml
