[package]
name = "graph_api"
description = "An API for the graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
tokio = "1.28.2"
graph_core = { path = "../graph_core" }
serde = "1.0.203"


[dev-dependencies]
rstest = "0.21.0"
